# northbound-microservices

./: .env  .gitignore  README.md  docker-compose.yml
Command/: .env  Command.csproj  Command.http  Command.sln  Dockerfile  Program.cs
Command/Controllers/: CommandController.cs
Command/Properties/: launchSettings.json
Command/Services/: MqttService.cs
assets/: eukiper_rule.sql
dashboard-service/: .env  .gitignore  Dockerfile  pom.xml
dashboard-service/src/main/java/com/dashboard/: App.java  DashboardService.java  NatsErrorListener.java
ekuiper/data/: dummy.txt  init.json
ekuiper/log/: dummy.txt
filter/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
filter/src/: Analyzer.ts  EnvironmentalSensorTelemetryDTO.ts  FilteredData.ts  RunningAverageCalculator.ts  RunningTruePercentageCalculator.ts  index.ts
grafana/provisioning/dashboards/: est-dashboard.json
influx/: README.md
influx-mock/influxdb2-config/: dummy.txt
influx-mock/influxdb2-data/: dummy.txt
influx-mock/scripts/: import_data.sh
mosquitto/: README.md
mosquitto/config/: dummy.txt  mosquitto.conf
mosquitto/data/: dummy.txt
mosquitto/log/: dummy.txt
secrets/: influx_token
sensor/: .gitignore  Dockerfile  README.md  pyproject.toml
sensor/sensor/: environmental_sensor_telemetry_data.py  influxdb_util.py  mqtt_util.py  sensor.py  server.py
ws-client/: Dockerfile  package-lock.json  package.json  webpack.config.js
ws-client/src/: app.js  index.html
